# project-d

./: .flake8  Makefile  README.md  deploy.sh  dhcpexpl.py  dnscopy.py  dnspurge.py  dnsseq.py  dnsstream.py  dnsstreamsim.py  httpcopy.py  httpgroup.py  httppurge.py  pyproject.toml  tcpdns.py
src/nx/: __init__.py
src/nx/admin/: cli.py  dbm.py  expl.py  ineedyou.py  redis.py  term.py
src/nx/audit/: secrets.py  service.py
src/nx/common/: __init__.py  constants.py  logging.py  packet_sniffer.py  worker.py  workers.py
src/nx/common/audit/: __init__.py  secrets.py
src/nx/roles/: http_sniffer.py  packet_sniffer.py  redis_client.py  worker.py
src/nx/services/: redis.py
src/nx/workers/: carla.py  daniel.py  ethan.py  kaitlin.py  steve.py  susan.py  zack.py
src/serfs/common/: exceptions.py
src/serfs/common/audit/: service.py
src/serfs/services/: redis.py
tests/: conftest.py  test_carla.py  test_daniel.py  test_ethan.py  test_kaitlin.py  test_steve_c2.py  test_susan.py
