[project]
name = "nx-workers"
dependencies = [
    "scapy",
    "redis",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "manuf",
    "paramiko",
    "pytest",
    "pytest-cov",
]

[project.scripts]
nxa = "nx.admin.cli:main"
ineedu = "nx.admin.ineedyou:main"
carla = "nx.workers.carla:main"
daniel = "nx.workers.daniel:main"
ethan = "nx.workers.ethan:main"
steve = "nx.workers.steve:main"
zack = "nx.workers.zack:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "nx.__version__"}
