[project]
name = "nx-workers"
dependencies = [
    "scapy",
    "redis",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "manuf",
    "paramiko",
    "pytest",
    "pytest-cov",
]

[project.scripts]
nxa = "nx.admin.cli:main"
inu = "nx.admin.ineedyou:main"
dbm =  "nx.admin.dbm:main"
carla = "nx.workers.carla:main"
daniel = "nx.workers.daniel:main"
ethan = "nx.workers.ethan:main"
steve = "nx.workers.steve:main"
susan = "nx.workers.susan:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "nx.__version__"}
